# clover

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.Clover.txt  CMakeLists.commands.txt  CMakeLists.tests.txt  CMakeLists.txt  CMakeLists.vcpkg.txt  CMakePresets.json  COPYRIGHT  CTest.cmake  LICENSE  LICENSE.TXT  LICENSEHEADER.TXT  README.md  THIRD_PARTY.md  bootstrap.sh  build.sh  cleanbuild.sh  configure.sh  interface.cpp  main.cpp  paex_sine_c++.cpp  sine.cpp  sources  todo.md  vcpkg.json
cmake/Dependencies/: CMakeLists.txt  GoogleBenchmark.cmake  GoogleTest.cmake  libsamplerate.cmake  libsndfile.cmake  pipewire.cmake  portaudio.cmake
examples/: CMakeLists.txt
examples/demo/: NxOscStsqDemo.h  main.cpp
src/benchmark_investigate/: CMakeLists.txt  cost_of_cast_in_linear_envelope.cpp  multiply-divide.cpp  std_distance.cpp
src/clover_benchmark/: CMakeLists.txt  circular_buffer.benchmark.cpp  float.benchmark.cpp  main.benchmark.cpp  math.benchmark.cpp
src/clover_benchmark/clover_benchmark/: intercept_reporter.cpp  intercept_reporter.hpp  util.hpp
src/clover_benchmark/dsp/: env_adsr.benchmark.cpp  env_automation_clip.benchmark.cpp  env_linear.benchmark.cpp  filter.benchmark.cpp  fractional_delay_lagrange.benchmark.cpp  fractional_delay_sinc.benchmark.cpp  interpolate.benchmark.cpp  interpolate_lagrange.benchmark.cpp  interpolate_sinc.benchmark.cpp  oscillator.benchmark.cpp  pan.benchmark.cpp  phase_increment_tracker.benchmark.cpp  wave.benchmark.cpp
src/clover_lib/: CMakeLists.txt
src/clover_lib/clover/: audio_buffer.cpp  audio_buffer.hpp  circular_buffer.benchmark.cpp  circular_buffer.cpp  circular_buffer.hpp  circular_buffer.test.cpp  circular_view.hpp  example.hpp  float.benchmark.cpp  float.cpp  float.hpp  float.test.cpp  main.benchmark.cpp  math.benchmark.cpp  math.cpp  math.hpp  math.test.cpp  num.hpp
src/clover_lib/clover/clover_benchmark/: intercept_reporter.cpp  intercept_reporter.hpp  util.hpp
src/clover_lib/clover/dsp/: env_adsr.benchmark.cpp  env_adsr.cpp  env_adsr.hpp  env_adsr.test.cpp  env_automation_clip.benchmark.cpp  env_automation_clip.cpp  env_automation_clip.hpp  env_automation_clip.test.cpp  env_linear.benchmark.cpp  env_linear.cpp  env_linear.hpp  env_linear.test.cpp  filter.benchmark.cpp  filter.cpp  filter.hpp  filter.test.cpp  filter_n.hpp  fractional_delay.cpp  fractional_delay.hpp  fractional_delay.test.cpp  fractional_delay_lagrange.benchmark.cpp  fractional_delay_sinc.benchmark.cpp  interpolate.hpp  interpolate_lagrange.benchmark.cpp  interpolate_lagrange.cpp  interpolate_lagrange.hpp  interpolate_lagrange.test.cpp  interpolate_sinc.cpp  interpolate_sinc.hpp  interpolate_sinc.test.cpp  oscillator.benchmark.cpp  oscillator.cpp  oscillator.hpp  oscillator.test.cpp  oscillator_simple.benchmark.cpp  oscillator_simple.cpp  oscillator_simple.hpp  oscillator_simple.test.cpp  pan.benchmark.cpp  pan.cpp  (+16 more)
src/clover_lib/clover/io/: AudioCallback.h  Interface.h  audio_callback.cpp  audio_callback.hpp  audio_file.cpp  audio_file.hpp  audio_file_manager.hpp  sample_clock.hpp  sample_clock.test.cpp  stream.cpp  stream.hpp  system_audio.cpp  system_audio.hpp
src/clover_lib/impl/: audio_buffer.cpp  circular_buffer.cpp  circular_view.cpp  example.cpp  float.cpp  math.cpp
src/clover_lib/impl/dsp/: env_adsr.cpp  env_automation_clip.cpp  env_linear.cpp  filter.cpp  fractional_delay.cpp  interpolate.cpp  interpolate_sinc.cpp  oscillator.cpp  pan.cpp  phase_increment_tracker.cpp  wave.cpp
src/clover_lib/impl/io/: audio_callback.cpp  audio_file.cpp  audio_file_manager.cpp  sample_clock.cpp  stream.cpp  system_audio.cpp
src/clover_test/: CMakeLists.txt  audio_buffer.test.cpp  circular_buffer.test.cpp  circular_view.test.cpp  float.test.cpp  main.test.cpp  math.test.cpp
src/clover_test/dsp/: env_adsr.test.cpp  env_automation_clip.test.cpp  env_linear.test.cpp  filter.test.cpp  fractional_delay.test.cpp  interpolate.test.cpp  interpolate_lagrange.test.cpp  interpolate_sinc.test.cpp  oscillator.test.cpp  phase_increment_tracker.test.cpp  wave.cpp  wave.test.cpp
src/clover_test/io/: audio_file.test.cpp  audio_file_manager.test.cpp  sample_clock.test.cpp
src/cpp_boilerplate_benchmark/: CMakeLists.txt  benchmark_main.cpp
src/cpp_boilerplate_test/: CMakeLists.txt  test_main.cpp
src/util/: CMakeLists.txt  calc.h  musicTime.cpp  musicTime.h  ringBuffer.h  sampleClock.cpp  sampleClock.h  util.h  wavetable.h
test/: CMakeLists.tests.txt  CMakeLists.txt
test/Algorithm/Delay/: Fractional.cc
test/Algorithm/DynamicRange/: AsymClip.cc  Clip.cc  UpwardDCCompression.cc
test/Algorithm/Envelope/: ADSR.cc  Basic.cc  DC.cc
test/Algorithm/Stereo/: Difference.cc  MidSideBalance.cc  Pan.cc  Sum.cc
test/Algorithm/Wavetable/: OscillatorIndexCalculator.cc  WavetableOscillatorMono.cc
test/Graph/: FrameHistory_Test.cc  Frame_Test.cc  Node_Test.cc
test/Midi/: Notes.cc
test/NodeSimplex/: NodeSmokeTests.cc
test/NodeSimplex/Adapter/: MapAdapter_Test.cc  MultiCast_Test.cc  NullAdapter_Test.cc
test/NodeSimplex/Basic/: Gain_Test.cc  Invert_Test.cc  Rectifier_Test.cc
test/NodeSimplex/Delay/: FractionalDelayLine_Test.cc
test/NodeSimplex/Envelope/: ADSR_Test.cc  AutomationClip_Test.cc  BasicEnvelope_Test.cc  DC_Test.cc
test/NodeSimplex/Filter/: Filter_Test.cc
test/NodeSimplex/StepSequencer/: STSQ_Pattern_Test.cc  STSQ_Test.cc
test/NodeSimplex/Stereo/: Difference_Test.cc  Invert_Test.cc  Pan_Test.cc
test/Nodes/: NodeSmokeTests.cc
test/Nodes/Basic/: Gain_Test.cc
test/Nodes/Envelope/: AutomationClip_Test.cc
test/Nodes/Filter/: Filter_Test.cc
test/Nodes/StepSequencer/: STSQ_Pattern_Test.cc  STSQ_Test.cc
test/Util/: Calc_Test.cc  CircularBuffer_Test.cc  HistoryBuffer_Test.cc  MusicTime.cc
test/functional/Algorithm/: Math_Test.cc
test/functional/Graph/: FrameHistory_Test.cc  Frame_Test.cc  Node_Test.cc
test/functional/IO/: AudioFileRepository.cc  AudioFileService_todo.md
test/functional/Midi/: Notes.cc
test/functional/Nodes/: NodeSmokeTests.cc
test/functional/Util/: Calc_Test.cc  HistoryBuffer_Test.cc  MusicTime.cc
(+673 files in other folders)
