option(CLOVER_FETCH_DEPENDENCIES     "" ON)
option(CLOVER_FETCH_GOOGLE_BENCHMARK "FetchContent for Google Benchmark" ON)
option(CLOVER_FETCH_GOOGLE_TEST      "FetchContent for Google Test"      ON)
option(CLOVER_FETCH_LIBSAMPLERATE    "FetchContent for libsamplerate"    ON)
option(CLOVER_FETCH_LIBSNDFILE       "FetchContent for libsndfile"       ON)

message("\n\n== Dependencies ==\n")

message("CLOVER_FETCH_DEPENDENCIES:     ${CLOVER_FETCH_DEPENDENCIES}")
message("CLOVER_FETCH_GOOGLE_BENCHMARK: ${CLOVER_FETCH_GOOGLE_BENCHMARK}")
message("CLOVER_FETCH_GOOGLE_TEST:      ${CLOVER_FETCH_GOOGLE_TEST}")
message("CLOVER_FETCH_LIBSAMPLERATE:    ${CLOVER_FETCH_LIBSAMPLERATE}")
message("CLOVER_FETCH_LIBSNDFILE:       ${CLOVER_FETCH_LIBSNDFILE}")

include(GoogleBenchmark.cmake)
include(GoogleTest.cmake)
include(libsamplerate.cmake)
include(libsndfile.cmake)
include(pipewire.cmake)
message("\n--------\n")
